--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css"> 
-    
     <title>Document</title>
 </head>
 <body>
   <div id="chessboard"></div>
-  <script src="./js/script.js"></script>
+  <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
